# -brazil_weather_streamlit

./: README.md  pyproject.toml
data/: .gitignore  weather.csv
data/brazil_weather/: dados_A001_D_2000-05-06_2020-12-31.csv  dados_A002_D_2001-05-28_2020-12-31.csv  dados_A003_D_2001-05-24_2020-12-31.csv  dados_A004_D_2001-05-30_2018-06-20.csv  dados_A005_D_2001-06-03_2020-12-31.csv  dados_A006_D_2001-06-07_2006-09-24.csv  dados_A007_D_2003-02-19_2005-08-15.csv  dados_A008_D_2003-06-12_2013-02-19.csv  dados_A009_D_2004-12-16_2020-12-31.csv  dados_A010_D_2005-03-03_2020-12-31.csv  dados_A011_D_2006-07-14_2020-12-31.csv  dados_A012_D_2006-10-20_2020-12-31.csv  dados_A013_D_2007-07-12_2020-12-31.csv  dados_A014_D_2007-07-17_2020-12-31.csv  dados_A015_D_2007-02-02_2020-12-31.csv  dados_A016_D_2007-05-22_2020-12-31.csv  dados_A017_D_2007-04-17_2020-12-31.csv  dados_A018_D_2006-11-30_2020-12-31.csv  dados_A019_D_2006-12-19_2020-12-31.csv  dados_A020_D_2007-01-22_2020-12-31.csv  dados_A021_D_2007-01-25_2020-12-31.csv  dados_A022_D_2007-06-01_2020-12-31.csv  dados_A023_D_2007-05-20_2020-12-31.csv  dados_A024_D_2007-06-03_2020-12-31.csv  dados_A025_D_2007-05-16_2020-12-31.csv  dados_A026_D_2007-11-23_2020-12-31.csv  dados_A027_D_2008-03-28_2020-12-31.csv  dados_A028_D_2013-06-23_2020-12-31.csv  dados_A029_D_2017-08-25_2020-12-31.csv  dados_A031_D_2017-06-28_2020-12-31.csv  dados_A032_D_2007-06-06_2020-12-31.csv  dados_A033_D_2007-10-11_2020-12-31.csv  dados_A034_D_2008-01-30_2020-12-31.csv  dados_A035_D_2007-10-31_2020-12-31.csv  (+581 more)
streamlit_app/: app.py  stations.py  weather.py
